# GSE-prototype-for-mac

./: .gitignore  CLAUDE.md  README.ja.md  README.md  README_for_MITOU.md  USETEST.md  advice.md  gpt-advice.md  index.html  package-lock.json  package.json  prompt.md  tmpclaude-918b-cwd
.claude/: CLAUDE.md  memory.md  settings.local.json
.claude/specs/: 01_sensing.md  02_inference.md  03_intervention.md  04_anchor.md
analysis/: behavioral_gt.py  hmm_sensitivity.py
src/: App.css  App.tsx
src-tauri/: Cargo.toml  Info.mac.plist  build.rs  build_log.txt  entitlements.mac.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  logger.rs  main.rs  sensors.rs  sensors_macos.rs  wall_server.rs
src-tauri/src/analysis/: engine.rs  features.rs  mod.rs
src-tauri/src/input/: hook.rs  hook_macos.rs  ime.rs  ime_macos.rs  mod.rs
src/components/: Dashboard.tsx  Overlay.tsx
