[package]
name = "gse-next"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gse_next_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Windows API (v0.58+)
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Input_Ime",
    "Win32_System_Threading",
    "Win32_UI_Accessibility",
    "Win32_System_Com",
    "Win32_System_Variant",
    "Win32_System_WinRT",
    # WinRT for Sensors
    "Devices_Sensors",
    "Devices_Geolocation",
    "Foundation",
] }

# Inference Engines
ort = { version = "2.0.0-rc.0", features = ["load-dynamic"] }
# karma = "0.1.0"

# Utilities
crossbeam-channel = "0.5"
lazy_static = "1.4"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

# Reduce debug build artifact size to avoid filling disk.
# debug=1 keeps line-number tables (enough for panic backtraces) but omits
# per-variable DWARF info.  Runtime performance is completely unaffected.
# This typically cuts target/debug/ from ~7GB down to ~3GB.
[profile.dev]
debug = 1
