[package]
name = "gse-next"
version = "0.1.0"
description = "GSE — Cognitive State Estimator for macOS"
authors = ["you"]
edition = "2021"

[lib]
name = "gse_next_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Utilities
crossbeam-channel = "0.5"
lazy_static = "1.4"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

# macOS: CGEventTap keyboard hook + CFRunLoop
core-graphics = { version = "0.23", features = ["highsierra"] }
core-foundation = "0.9"

# macOS: Objective-C runtime (CMMotionManager stub)
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSRunLoop", "NSString"] }

# Reduce debug build artifact size to avoid filling disk.
[profile.dev]
debug = 0
split-debuginfo = "unpacked"
codegen-units = 1

[profile.dev.package."icu_properties"]
opt-level = 0
codegen-units = 1

[profile.dev.package."core-graphics"]
opt-level = 0
codegen-units = 1
