[package]
name = "gse-next"
version = "0.1.0"
description = "GSE — Cognitive State Estimator for macOS"
authors = ["you"]
edition = "2021"

[lib]
name = "gse_next_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
crossbeam-channel = "0.5"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

# macOS: CGEventTap keyboard hook + CFRunLoop
core-graphics = { version = "0.23", features = ["highsierra"] }
core-foundation = "0.9"

# Wall unlock: embedded HTTP server + QR code generation
tiny_http = "0.12"
qrcode = "0.14"
base64 = "0.22"

# Reduce debug build artifact size to avoid filling disk.
[profile.dev]
debug = 0
split-debuginfo = "unpacked"
codegen-units = 1

[profile.dev.package."icu_properties"]
opt-level = 0
codegen-units = 1

[profile.dev.package."core-graphics"]
opt-level = 0
codegen-units = 1
